RT-18484: Misc changes
- Add small paragraphs to /reu
- Remove 2020 from /reu/research
- Update image paths and styles on /reu/alumni

--- a/content/reu/alumni--content.html
+++ b/content/reu/alumni--content.html
@@ -3,10 +3,10 @@
 <h4>
 	2016 Cohort</h4>
 <p>
-	<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1254810/reu-2016.jpg/0c1294d4-9208-4272-ba2c-1a8ec99c7dd2?t=1493333264000" /><!--<br /><i>Left to Right: (Back row) Fatima Al-Quaiti, St. Mary's University; Joshua Matos Gonzalez, University of Puerto Rico, Mayagüez Campus; Tiffany Connors, Texas State University; Keith Waggoner, University of Alabama; Joseph Molina, California State University, Monterey Bay; Marvis Cruz Fuentes, University of Florida; Grace Rodríguez Gómez, University of Puerto Rico, Río Piedras Campus; James Pippin, Fort Valley State University; (front row): Linda Moise, Virgina Union University. Not featured: Zeerak Abbas, The University of Texas at Austin</i></p>--></p>
+	<img class="img-responsive" src="/documents/1084364/1535368/reu-alumni-2016.jpg" /><!--<br /><i>Left to Right: (Back row) Fatima Al-Quaiti, St. Mary's University; Joshua Matos Gonzalez, University of Puerto Rico, Mayagüez Campus; Tiffany Connors, Texas State University; Keith Waggoner, University of Alabama; Joseph Molina, California State University, Monterey Bay; Marvis Cruz Fuentes, University of Florida; Grace Rodríguez Gómez, University of Puerto Rico, Río Piedras Campus; James Pippin, Fort Valley State University; (front row): Linda Moise, Virgina Union University. Not featured: Zeerak Abbas, The University of Texas at Austin</i></p>--></p>
 <p>
 	<b>STUDENT WEBSITES</b></p>
-<ul style="line-height:1.5;">
+<ul>
 	<li>
 		Linda Moise, Virginia Union University: <a href="http://lmoiseicertreu.wix.com/icertreu" target="_blank">lmoiseicertreu.wix.com/icertreu</a></li>
 	<li>
@@ -31,10 +31,10 @@
 <h4>
 	2015 Cohort</h4>
 <p>
-	<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1487773/ICERT-REU-2015.jpg/e4da8d3b-dee8-498d-96bf-2757f4fc4c82?t=1496957515264" /></p>
+	<img class="img-responsive" src="/documents/1084364/1535368/reu-alumni-2015.jpg" /></p>
 <p>
 	<b>STUDENT WEBSITES</b></p>
-<ul style="line-height:1.5;">
+<ul>
 	<li>
 		Margaret Arnold, University at Buffalo:&nbsp;<a href="http://megarnold.weebly.com/">http://megarnold.weebly.com</a></li>
 	<li>
@@ -60,7 +60,7 @@
 <h4>
 	2014 Cohort</h4>
 <p>
-	<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/icertreu.jpg" /></p>
+	<img class="img-responsive" src="/documents/1084364/1535368/reu-alumni-2014.jpg" /></p>
 <p>
 	<b>STUDENT WEBSITES</b></p>
 <ul>
