--- a/content/reu/research--content.html
+++ b/content/reu/research--content.html
@@ -1,5 +1,5 @@
 <h3>
-	2020 Research Projects</h3>
+	Research Projects</h3>
 <p>
 	<img class="img-responsive" src="/documents/1084364/1535368/reu-research-groups.jpg" style="margin-bottom:20px;" /></p>
 <p>
