--- a/content/reu--content.html
+++ b/content/reu--content.html
@@ -1,5 +1,7 @@
 <h3>
 	Program Overview</h3>
+<p>
+	The proposed research projects are subject to change, contingent on new mentors and/or the research interests of the students. <em>To learn about past research projects, please visit the <a href="/reu/alumni">REU Alumni page</a>.</em></p>
 <h4>
 	June 7 — August 6, 2021</h4>
 <p>
