Quick: Update weteach card style usage list

--- a/content/education/EPIC/WeTeach_CS/goals-and-outcomes.html
+++ b/content/education/EPIC/WeTeach_CS/goals-and-outcomes.html
@@ -66,10 +66,12 @@
         - `epic`
         - `epic/stem-evaluation-services`
         - `epic/research`
-        - `epic/weteachcs/about/projects`
         - `epic/weteachcs`
+        - `epic/weteachcs/about/projects`
+        - `epic/weteachcs/certification`
         - `epic/weteachcs/goals-and-outcomes`
         - `epic/weteachcs/code.org`
+        - `reu`
 */
     /*
     WeTeach CS - Card
