--- a/content/education/EPIC/funders-and-project-partners.html
+++ b/content/education/EPIC/funders-and-project-partners.html
@@ -57,12 +57,15 @@ Style guide: components.weteachcs
 <style id="style--weteachcs-card" type="text/css">
 /* TODO: Use this component instead of `style` tags */
         /* WARN: Duplicated in:
-                    - `epic`
-                    - `epic/stem-evaluation-services`
-                    - `epic/research`
-                    - `epic/weteachcs`
-                    - `epic/weteachcs/goals-and-outcomes`
-                    - `epic/weteachcs/code.org`
+                - `epic`
+                - `epic/stem-evaluation-services`
+                - `epic/research`
+                - `epic/weteachcs`
+                - `epic/weteachcs/about/projects`
+                - `epic/weteachcs/certification`
+                - `epic/weteachcs/goals-and-outcomes`
+                - `epic/weteachcs/code.org`
+                - `reu`
         */
             /*
             WeTeach CS - Card
