--- a/content/education/EPIC/WeTeach_CS/code-org.html
+++ b/content/education/EPIC/WeTeach_CS/code-org.html
@@ -61,9 +61,11 @@ Style guide: components.weteachcs
         - `epic/stem-evaluation-services`
         - `epic/research`
         - `epic/weteachcs`
+        - `epic/weteachcs/about/projects`
         - `epic/weteachcs/certification`
         - `epic/weteachcs/goals-and-outcomes`
         - `epic/weteachcs/code.org`
+        - `reu`
 */
     /*
     WeTeach CS - Card
