--- a/content/education/EPIC/stem-evaluation-services.html
+++ b/content/education/EPIC/stem-evaluation-services.html
@@ -61,7 +61,11 @@
 					- `epic/stem-evaluation-services`
 					- `epic/research`
 					- `epic/weteachcs`
+					- `epic/weteachcs/about/projects`
+					- `epic/weteachcs/certification`
 					- `epic/weteachcs/goals-and-outcomes`
+					- `epic/weteachcs/code.org`
+					- `reu`
 			*/
 				/*
 				WeTeach CS - Card
