--- a/content/education/EPIC/weteach_cs.html
+++ b/content/education/EPIC/weteach_cs.html
@@ -5,7 +5,11 @@
                 - `epic/stem-evaluation-services`
                 - `epic/research`
                 - `epic/weteachcs`
+                - `epic/weteachcs/about/projects`
+                - `epic/weteachcs/certification`
                 - `epic/weteachcs/goals-and-outcomes`
+                - `epic/weteachcs/code.org`
+                - `reu`
         */
             /*
             WeTeach CS - Card
