Quick: COVID-19 message update for REU

--- a/content/reu--notice.html
+++ b/content/reu--notice.html
@@ -1,9 +1,8 @@
 <style id="portlet-msg-info" type="text/css">
-    .portlet-msg-info p:last-child {
-      margin-bottom: 0;
-    }</style>
-    <div class="portlet-msg-info">
-        <p>
-            In response to COVID-19, the CI Research 4 Social Change will be a virtual REU Site in 2020.</p>
-    </div>
-    
+.portlet-msg-info p:last-child {
+  margin-bottom: 0;
+}</style>
+<div class="portlet-msg-info">
+	<p>
+		In response to COVID-19, the CI Research 4 Social Change is prepared to offer a virtual REU Site in 2021.</p>
+</div>
