RT-18472: Update ALlen's e-mail

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -63,7 +63,7 @@
 			<td>
 				<a href="/web/website/about/directory/allen-antoine">Antoine, Allen J., Jr.</a></td>
 			<td>
-				<a href="mailto:ajantoine@rice.edu">ajantoine@rice.edu</a></td>
+				<a href="mailto:aantoine@tacc.utexas.edu">aantoine@tacc.utexas.edu</a></td>
 			<td>
 				Expanding Pathways in Computing (EPIC)</td>
 		</tr>
