--- a/content/education/EPIC/WeTeach_CS/code-org.html
+++ b/content/education/EPIC/WeTeach_CS/code-org.html
@@ -1,9 +1,7 @@
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
-        - `epic`
-        - `epic/stem-evaluation-services`
-        - `epic/research`
+        - `epic/research/presentations-and-publications`
         - `epic/weteachcs/about`
         - `epic/weteachcs/about/projects`
         - `epic/weteachcs/certification`
@@ -57,15 +55,11 @@ Style guide: components.weteachcs
 <style id="style--weteachcs-card" type="text/css">
 /* TODO: Use this component instead of `style` tags */
 /* WARN: Duplicated in:
-        - `epic`
-        - `epic/stem-evaluation-services`
-        - `epic/research`
+        - `epic/research/presentations-and-publications`
         - `epic/weteachcs`
-        - `epic/weteachcs/about/projects`
         - `epic/weteachcs/certification`
         - `epic/weteachcs/goals-and-outcomes`
         - `epic/weteachcs/code.org`
-        - `reu`
 */
     /*
     WeTeach CS - Card
@@ -137,16 +131,11 @@ Style guide: components.weteachcs
         /* Use a border style that exists on the page */
         /* SEE: .portlet-navigation .nav-menu > .layouts a */
         border: 1px solid #ddd;
-    }
-    /* Full width card media needs buffer between it and content below (if present) */
-    /* FAQ: Known to be used on these pages: `/epic` */
-    .col-sm-12:not(:only-child) .weteachcs-card__media {
-        /* Add space between image and content beneath */
-        padding-bottom: 15px; /* Horizontal padding from `.col` (via `tacc-new-theme/css/main.css`) */
     }</style>
 <style id="style--weteachcs-cta" type="text/css">
 /* TODO: Use this component instead of `style` tags */
 /* WARN: Duplicated in:
+        - `epic/research/presentations-and-publications`
         - `epic/weteachcs`
         - `epic/weteachcs/certification`
         - `epic/weteachcs/goals-and-outcomes`
@@ -172,7 +161,7 @@ Style guide: components.weteachcs.cta
     font-variant: small-caps;
 }</style>
 <style id="style--weteachcs-quote" type="text/css">
-    /* TODO: Use this component instead of `style` tags */
+/* TODO: Use this component instead of `style` tags */
     /*
     WeTeach CS - Quote
 
@@ -218,48 +207,53 @@ Style guide: components.weteachcs.cta
     }
     .weteachcs-quote__source a {
         color: unset;
-    }
-</style>
+    }</style>
 <section class="weteachcs-content">
-    <h3>
-        Code.org</h3>
-    <div class="weteachcs-card weteachcs-card--highlight">
-        <div class="row">
-            <div class="col-sm-3">
-                <img class="img-responsive weteachcs-card__media" src="/documents/1084364/1761473/codedotorg.png/" /></div>
-            <div class="col-sm-9">
-                <h4>
-                    WeTeach_CS Code.org Regional Partners</h4>
-                <blockquote class="weteachcs-quote">
-                    <p class="weteachcs-quote__content">Regional Partners are carrying on the teacher recruitment, professional learning, and district management work that Code.org began, and as such, they are now the power users of Code.org tools and processes and are best suited to offer valuable feedback and input.</p>
-                    <footer class="weteachcs-quote__source"><a href="https://code.org/">Code.org</a></footer>
-                </blockquote>
-            </div>
-        </div>
-    </div>
-    <h4>
-        CS Fundamentals</h4>
-    <p>
-        Computer science is foundational knowledge for all students in the 21st century. But a lot of schools don't teach it, especially at the elementary level. But now you can. With the help of <a href="http://code.org/" target="_blank">Code.org</a>, WeTeach_CS is providing a no-cost, one day workshop for K-5 teachers interested in teaching computer science. Over 80,000 teachers have participated in a workshop and the majority say it's the best PD they've ever attended. You will receive: In-person instruction including an intro to computer science, pedagogy, an overview of the online curriculum, teacher dashboard, and strategies for teaching "unplugged" classroom activities. In addition, you will receive: printed curriculum guide, certificate of completion, and fun Code.org swag. This session is designed for teachers, librarians, instructional coaches, and administrators grades K-5 to learn about Code.org resources and how to begin to integrate computer science into your future curriculum. This is a BYOD session, please bring your fully charged laptop, tablet or iPad and a power cord.</p>
-    <p>
-        <b>Elementary School Teachers</b><br />
-        We welcome elementary school teachers to sign up year-round for our no-cost, high-quality one-day professional development workshops for Computer Science Fundamentals courses from an experienced computer science facilitator.</p>
-    <h4>
-        <a href="https://code.org/professional-development-workshops" target="_blank">Find a Code.org CS Fundamentals workshop near you</a></h4>
-    <p>
-        Type in your zip code on the Code.org site to find existing workshops in your area. If none appear you can request your own workshop, as long as you have 12 attendees, by contacting your Regional Partner through the yellow button below the map or <a href="https://studio.code.org/pd/regional_partner_contact/new" target="_blank">clicking here</a>.</p>
-    <h4>
-        CS Discoveries</h4>
-    <p>
-        Computer Science Discoveries is appropriate for 6-10th-grade students and can be taught as a semester or year-long introductory course (3-5 hours per week of instruction for 9+ weeks). The course takes a wide lens on computer science by covering topics such as programming, physical computing, HTML/CSS, and data. The course inspires students as they build their own websites, apps, games, and physical computing devices.</p>
-    <p>
-        <a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-2020-CSD-5day/" target="_blank">Apply Here<span class="sr-only"> for WeTeach_CS "CS Discoveries"</span></a><p>
-    <h4>
-        CS Principles</h4>
-    <p>
-        Computer Science Principles introduces students to the foundational concepts of computer science and challenges them to explore how computing and technology can impact the world. More than a traditional introduction to programming, it is a rigorous, engaging, and approachable course that explores many of the foundational ideas of computing so all students understand how these concepts are transforming the world we live in.</p>
-    <p>
-        If you are interested in either of these courses please fill out the Code.org application to participate in the 2019-20 cohort.</p>
-    <p>
-        <a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-2020-CSP-5day/" target="_blank">Apply Here<span class="sr-only"> for WeTeach_CS "CS Principles"</span></a></a><p>
+	<h3>
+		Code.org</h3>
+	<div class="weteachcs-card weteachcs-card--highlight">
+		<div class="row">
+			<div class="col-sm-3">
+				<img class="img-responsive weteachcs-card__media" src="/documents/1084364/1761473/codedotorg.png/" /></div>
+			<div class="col-sm-9">
+				<h4>
+					WeTeach_CS Code.org Regional Partners</h4>
+				<blockquote class="weteachcs-quote">
+					<p class="weteachcs-quote__content">
+						Regional Partners are carrying on the teacher recruitment, professional learning, and district management work that Code.org began, and as such, they are now the power users of Code.org tools and processes and are best suited to offer valuable feedback and input.</p>
+					<footer class="weteachcs-quote__source">
+						<a href="https://code.org/">Code.org</a></footer>
+				</blockquote>
+			</div>
+		</div>
+	</div>
+	<h4>
+		CS Fundamentals</h4>
+	<p>
+		Computer science is foundational knowledge for all students in the 21st century. But a lot of schools don't teach it, especially at the elementary level. But now you can. With the help of <a href="http://code.org/" target="_blank">Code.org</a>, WeTeach_CS is providing a no-cost, one day workshop for K-5 teachers interested in teaching computer science. Over 80,000 teachers have participated in a workshop and the majority say it's the best PD they've ever attended. You will receive: In-person instruction including an intro to computer science, pedagogy, an overview of the online curriculum, teacher dashboard, and strategies for teaching "unplugged" classroom activities. In addition, you will receive: printed curriculum guide, certificate of completion, and fun Code.org swag. This session is designed for teachers, librarians, instructional coaches, and administrators grades K-5 to learn about Code.org resources and how to begin to integrate computer science into your future curriculum. This is a BYOD session, please bring your fully charged laptop, tablet or iPad and a power cord.</p>
+	<p>
+		<b>Elementary School Teachers</b><br />
+		We welcome elementary school teachers to sign up year-round for our no-cost, high-quality one-day professional development workshops for Computer Science Fundamentals courses from an experienced computer science facilitator.</p>
+	<h4>
+		<a href="https://code.org/professional-development-workshops" target="_blank">Find a Code.org CS Fundamentals workshop near you</a></h4>
+	<p>
+		Type in your zip code on the Code.org site to find existing workshops in your area. If none appear you can request your own workshop, as long as you have 12 attendees, by contacting your Regional Partner through the yellow button below the map or <a href="https://studio.code.org/pd/regional_partner_contact/new" target="_blank">clicking here</a>.</p>
+	<h4>
+		CS Discoveries</h4>
+	<p>
+		Computer Science Discoveries is appropriate for 6-10th-grade students and can be taught as a semester or year-long introductory course (3-5 hours per week of instruction for 9+ weeks). The course takes a wide lens on computer science by covering topics such as programming, physical computing, HTML/CSS, and data. The course inspires students as they build their own websites, apps, games, and physical computing devices.</p>
+	<p>
+		<a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-2021-CSD-5day/" target="_blank">Apply Here<span class="sr-only"> for WeTeach_CS "CS Discoveries"</span></a></p>
+	<p>
+		&nbsp;</p>
+	<h4>
+		CS Principles</h4>
+	<p>
+		Computer Science Principles introduces students to the foundational concepts of computer science and challenges them to explore how computing and technology can impact the world. More than a traditional introduction to programming, it is a rigorous, engaging, and approachable course that explores many of the foundational ideas of computing so all students understand how these concepts are transforming the world we live in.</p>
+	<p>
+		If you are interested in either of these courses please fill out the Code.org application to participate in the 2020-2021 cohort.</p>
+	<p>
+		<a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-2021-CSP-5day/" target="_blank">Apply Here<span class="sr-only"> for WeTeach_CS "CS Principles"</span></a></p>
+	<p>
+		&nbsp;</p>
 </section>
