--- a/content/home--training-and-events.html
+++ b/content/home--training-and-events.html
@@ -2,29 +2,29 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/course/view.php?id=94" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/frontera.jpg" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://learn.tacc.utexas.edu/course/view.php?id=94" target="_blank"><strong>High Performance Computing on Frontera Training Series: October 2020</strong><br />Focus on MPI, Hybrid Computing</a><br />
-			October 15, 2020</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/course/view.php?id=97" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/frontera.jpg" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://learn.tacc.utexas.edu/course/view.php?id=97" target="_blank"><strong>High Performance Computing on Frontera Training Series: October 2020</strong><br />Focus on MPI, Hybrid Computing</a><br />
-			October 22, 2020</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
 		<a href="https://learn.tacc.utexas.edu/course/view.php?id=95" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/frontera.jpg" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://learn.tacc.utexas.edu/course/view.php?id=95" target="_blank"><strong>High Performance Computing on Frontera Training Series: October 2020</strong><br />Focus on Parallel I/O, HPC Tools, Debugging, Profiling, and Best Practices</a><br />
+			<a href="https://learn.tacc.utexas.edu/course/view.php?id=95" target="_blank"><strong>High Performance Computing on Frontera Training Series: October 2020</strong> Focus on Parallel I/O, HPC Tools, Debugging, Profiling, and Best Practices</a><br />
 			October 29, 2020</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=98" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/tacc.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=98" target="_blank"><strong>Containers @ TACC</strong></a><br />
+			November 6, 2020</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://sc20.supercomputing.org/presentation/?id=tut138&sess=sess255" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/sc20.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://sc20.supercomputing.org/presentation/?id=tut138&sess=sess255" target="_blank"><strong> Tools and Best Practices for Distributed Deep Learning on Supercomputer (SC20)</strong></a><br />
+			November 9, 2020</p>
 	</div>
 </div>
 <div class="row">
