--- a/content/reu--content.html
+++ b/content/reu--content.html
@@ -37,7 +37,13 @@
 <h4 style="margin-top:20px;">
 	APPLICATION &amp; SELECTION</h4>
 <p>
-	The application period for Summer 2021 is November 1, 2020–March 1, 2021.<!--We recommend that you collect all information before starting the application to prevent loss of information if you leave or close the application page.--></p>
+	The application period for Summer 2021 is November 1, 2020 - March 1, 2021.<!--We recommend that you collect all information before starting the application to prevent loss of information if you leave or close the application page.--></p>
+<ol>
+    <li>Complete the <a src="https://docs.google.com/forms/d/1hlnmbNJJSdYuHpHNtZ6uPjBK1kAjjIEYuj-kyagoqf4/prefill">application</a> before March 1, 2021, 11:59pm CST.</li>
+    <li>Email copy of unofficial or official transcript to <a href="mailto:CIR4SC@tacc.utexas.edu">CIR4SC@tacc.utexas.edu</a>. Selected participants will be required to submit an official transcript.</li>
+    <li>Secure commitment from two recommenders. These individuals should know your academic abilities and work ethic. At least one recommender should be college/university faculty. It is your responsibility to ask recommenders to complete the <a src="https://utexas.qualtrics.com/jfe/form/SV_cOVFoBizpbpZT8x">recommendation form</a> by the March 1st application deadline.</li></ol>
+<p>
+    Notifications of acceptance for Summer 2021: Rolling until March 15.</p>
 <h4 style="margin-top:20px;">
 	ELIGIBILITY</h4>
 <p>
