--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -869,7 +869,7 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/juan-ramirez">Martinez, Juan</a></td>
+				<a href="/web/website/about/directory/juan-ramirez">Ramirez, Juan Martinez</a></td>
 			<td>
 				<a href="mailto:jmartinez@tacc.utexas.edu">jmartinez@tacc.utexas.edu</a></td>
 			<td>
