--- a/content/home--featured-news.html
+++ b/content/home--featured-news.html
@@ -21,17 +21,17 @@
 </div>
 <div class="row">
 	<div class="col-md-6">
-		<img alt="PREDICTIVE SCIENCE RESEARCH GETS MAJOR BOOST THANKS TO THE DEPARTMENT OF ENERGY" class="img-responsive" src="/documents/1084364/1809667/home-predictive.png/" style="margin:0px 0px 15px 0px;" /></div>
+		<img alt="SUPERCOMPUTING 2020 CONFERENCE" class="img-responsive" src="/documents/1084364/1809667/home-sc20.png/" style="margin:0px 0px 15px 0px;" /></div>
 	<div class="col-md-6">
 		<h5 style="margin:0px 0px 25px 0px;">
-			<a href="/web/website/-/predictive-science-research-gets-major-boost-thanks-to-the-department-of-energy">PREDICTIVE SCIENCE RESEARCH GETS MAJOR BOOST THANKS TO THE DEPARTMENT OF ENERGY</a></h5>
+			<a href="/web/website/sc20">TACC Participation at SC20 (Supercomputing 2020)</a></h5>
 	</div>
 </div>
 <div class="row">
 	<div class="col-md-6">
-		<img alt="LEGACY HIGH PERFORMANCE SYSTEM SEEDS SUPERCOMPUTING EXCELLENCE AT UT DALLAS" class="img-responsive" src="/documents/1084364/1809667/home-legacy.jpeg/" style="margin:0px 0px 15px 0px;" /></div>
+		<img alt="PREDICTIVE SCIENCE RESEARCH GETS MAJOR BOOST THANKS TO THE DEPARTMENT OF ENERGY" class="img-responsive" src="/documents/1084364/1809667/home-predictive.png/" style="margin:0px 0px 15px 0px;" /></div>
 	<div class="col-md-6">
 		<h5 style="margin:0px 0px 25px 0px;">
-			<a href="/web/website/-/legacy-high-performance-system-seeds-supercomputing-excellence-at-ut-dallas">LEGACY HIGH PERFORMANCE SYSTEM SEEDS SUPERCOMPUTING EXCELLENCE AT UT DALLAS</a></h5>
+			<a href="/web/website/-/predictive-science-research-gets-major-boost-thanks-to-the-department-of-energy">PREDICTIVE SCIENCE RESEARCH GETS MAJOR BOOST THANKS TO THE DEPARTMENT OF ENERGY</a></h5>
 	</div>
 </div>
