SC20: Home: Featured News: Link text change

--- a/content/home--featured-news.html
+++ b/content/home--featured-news.html
@@ -24,7 +24,7 @@
 		<img alt="SUPERCOMPUTING 2020 CONFERENCE" class="img-responsive" src="/documents/1084364/1809667/home-sc20.png/" style="margin:0px 0px 15px 0px;" /></div>
 	<div class="col-md-6">
 		<h5 style="margin:0px 0px 25px 0px;">
-			<a href="/web/website/sc20">TACC Participation at SC20 (Supercomputing 2020)</a></h5>
+			<a href="/web/website/sc20">SC20 TACC PARTICIPATION</a></h5>
 	</div>
 </div>
 <div class="row">
