--- a/content/home--featured-news.html
+++ b/content/home--featured-news.html
@@ -5,7 +5,7 @@
 <!--The COVID-19 (1st) and Urgent Computing (2nd) entries should be at the top-->
 <div class="row">
 	<div class="col-md-6">
-		<img alt="COVID-19 UPDATES FROM TACC" class="img-responsive" src="/documents/1084364/1809667/home-covid-page.jpg/" style="margin:0px 0px 15px 0px;" /></div>
+		<a href="/web/website/covid-19"><img alt="COVID-19 UPDATES FROM TACC" class="img-responsive" src="/documents/1084364/1809667/home-covid-page.jpg/" style="margin:0px 0px 15px 0px;" /></a></div>
 	<div class="col-md-6">
 		<h5 style="margin:0px 0px 25px 0px;">
 			<a href="/web/website/covid-19">COVID-19 UPDATES FROM TACC</a></h5>
@@ -21,7 +21,7 @@
 </div>
 <div class="row">
 	<div class="col-md-6">
-		<img alt="SUPERCOMPUTING 2020 CONFERENCE" class="img-responsive" src="/documents/1084364/1809667/home-sc20.png/" style="margin:0px 0px 15px 0px;" /></div>
+		<a href="/web/website/sc20"><img alt="SUPERCOMPUTING 2020 CONFERENCE" class="img-responsive" src="/documents/1084364/1809667/home-sc20.png/" style="margin:0px 0px 15px 0px;" /></a></div>
 	<div class="col-md-6">
 		<h5 style="margin:0px 0px 25px 0px;">
 			<a href="/web/website/sc20">TACC at SC20</a></h5>
@@ -29,7 +29,16 @@
 </div>
 <div class="row">
 	<div class="col-md-6">
-		<img alt="PREDICTIVE SCIENCE RESEARCH GETS MAJOR BOOST THANKS TO THE DEPARTMENT OF ENERGY" class="img-responsive" src="/documents/1084364/1809667/home-predictive.png/" style="margin:0px 0px 15px 0px;" /></div>
+		<a href="/web/website/education/tours" title="TACC Data Center" target="_blank"><img alt="TACC Data Center" class="img-responsive" src="/documents/1084364/1085237/tours-explore-data_center.thumb-for-home.jpg/" style="margin:0px 0px 15px 0px;" /></a>
+	</div>
+	<div class="col-md-6">
+		<h5 style="margin:0px 0px 25px 0px;">
+			<a href="/web/website/education/tours">Explore the TACC Data Center in 3D</a></h5>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		<a href="/web/website/-/predictive-science-research-gets-major-boost-thanks-to-the-department-of-energy"><img alt="PREDICTIVE SCIENCE RESEARCH GETS MAJOR BOOST THANKS TO THE DEPARTMENT OF ENERGY" class="img-responsive" src="/documents/1084364/1809667/home-predictive.png/" style="margin:0px 0px 15px 0px;" /></a></div>
 	<div class="col-md-6">
 		<h5 style="margin:0px 0px 25px 0px;">
 			<a href="/web/website/-/predictive-science-research-gets-major-boost-thanks-to-the-department-of-energy">PREDICTIVE SCIENCE RESEARCH GETS MAJOR BOOST THANKS TO THE DEPARTMENT OF ENERGY</a></h5>
