--- a/content/home--featured-news.html
+++ b/content/home--featured-news.html
@@ -33,7 +33,7 @@
 	</div>
 	<div class="col-md-6">
 		<h5 style="margin:0px 0px 25px 0px;">
-			<a href="/web/website/education/tours">Explore the TACC Data Center in 3D</a></h5>
+			<a href="/web/website/education/tours">Explore TACC's Data Center in 3D</a></h5>
 	</div>
 </div>
 <div class="row">
