--- a/content/home--training-and-events.html
+++ b/content/home--training-and-events.html
@@ -2,37 +2,55 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/course/view.php?id=95" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/frontera.jpg" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://learn.tacc.utexas.edu/course/view.php?id=95" target="_blank"><strong>High Performance Computing on Frontera Training Series: October 2020</strong> Focus on Parallel I/O, HPC Tools, Debugging, Profiling, and Best Practices</a><br />
-			October 29, 2020</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=98" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/tacc.png" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=98" target="_blank"><strong>Containers @ TACC</strong></a><br />
-			November 6, 2020</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
-		<a href="https://sc20.supercomputing.org/presentation/?id=tut138&sess=sess255" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/sc20.png" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://sc20.supercomputing.org/presentation/?id=tut138&sess=sess255" target="_blank"><strong> Tools and Best Practices for Distributed Deep Learning on Supercomputer (SC20)</strong></a><br />
-			November 9, 2020</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
 		<a href="https://frontera-portal.tacc.utexas.edu/allocations/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/-allocations.jpg/" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://frontera-portal.tacc.utexas.edu/allocations/" target="_blank"><strong>Leadership Resource Allocation (LRAC) Annual Allocation Submission</strong></a><br />
+			<a href="https://frontera-portal.tacc.utexas.edu/allocations/" target="_blank">Leadership Resource Allocation (LRAC) Annual Allocation Submission</a><br />
 			December 14, 2020 – January 15, 2021</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=111" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/tacc.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=111" target="_blank">Introduction to Machine Learning at TACC</a><br />
+			February 2, 2021</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=112" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/tacc.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=112" target="_blank">Introduction to Deep learning at TACC</a><br />
+			February 9, 2021</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=113" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/tacc.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=113" target="_blank">Introduction to Linux</a><br />
+			February 10, 2021</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=114" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/c-plus-plus.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=114" target="_blank">C++ for C Programmers</a><br />
+			February 18, 2021</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=115" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/c-plus-plus.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=115" target="_blank">MPL Object-Oriented Interface to MPI</a><br />
+			February 25, 2021</p>
 	</div>
 </div>
