RT-18624: More text to an epic page

--- a/content/education/EPIC/WeTeach_CS/code-org.html
+++ b/content/education/EPIC/WeTeach_CS/code-org.html
@@ -239,15 +239,19 @@ Style guide: components.weteachcs.cta
 	<p>
 		Type in your zip code on the Code.org site to find existing workshops in your area. If none appear you can request your own workshop, as long as you have 12 attendees, by contacting your Regional Partner through the yellow button below the map or <a href="https://studio.code.org/pd/regional_partner_contact/new" target="_blank">clicking here</a>.</p>
 	<h4>
-		CS Discoveries</h4>
+		Professional Learning Program - CS Discoveries and CS Principles</h4>
+	<p>
+		Texas Computer Science courses, including those aligned to CS Discoveries (Fundamentals of CS) and CS Principles, have recently moved to CTE and qualify for weighted funding. Teachers should check with their administrators to see if these funds are available to support their involvement in this Professional Learning Program. There are also scholarships available for those that qualify.</p>
+	<h5>
+		CS Discoveries</h5>
 	<p>
 		Computer Science Discoveries is appropriate for 6-10th-grade students and can be taught as a semester or year-long introductory course (3-5 hours per week of instruction for 9+ weeks). The course takes a wide lens on computer science by covering topics such as programming, physical computing, HTML/CSS, and data. The course inspires students as they build their own websites, apps, games, and physical computing devices.</p>
 	<p>
 		<a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-2021-CSD-5day/" target="_blank">Apply Here<span class="sr-only"> for WeTeach_CS "CS Discoveries"</span></a></p>
 	<p>
 		&nbsp;</p>
-	<h4>
-		CS Principles</h4>
+	<h5>
+		CS Principles</h5>
 	<p>
 		Computer Science Principles introduces students to the foundational concepts of computer science and challenges them to explore how computing and technology can impact the world. More than a traditional introduction to programming, it is a rigorous, engaging, and approachable course that explores many of the foundational ideas of computing so all students understand how these concepts are transforming the world we live in.</p>
 	<p>
