Quick: EPIC: Better use `.weteachcs-card`, 3 pages

--- a/content/education/epic.html
+++ b/content/education/epic.html
@@ -145,12 +145,10 @@ Style guide: components.weteachcs.card
 <section class="weteachcs-content">
     <div class="weteachcs-card weteachcs-card--highlight">
         <div class="row">
-            <div class="col-sm-12">
-                <img class="img-responsive weteachcs-card__media" src="/documents/1084364/1761473/epic-4c-2020-logo-with-text.svg" /></div>
-            <div class="col-sm-12">
-                <p>
-                    EPIC's mission is to broaden participation in K20 computing pathways through research, outreach, professional development, and policy advocacy. To achieve this mission, we partner with school districts, institutions of higher education, industry leaders, and federal, state and local government entities who are also dedicated to expanding access and opportunity for traditionally underrepresented students in computing. EPIC also provides evaluation and technology services to external entities to help advance their STEM education research and outreach.</p>
-            </div>
+            <figure class="col-sm-12  weteachcs-card__figure">
+                <img class="img-responsive weteachcs-card__media" src="/documents/1084364/1761473/epic-4c-2020-logo-with-text.svg" /></figure>
+            <p class="col-sm-12  weteachcs-card__content">
+                EPIC's mission is to broaden participation in K20 computing pathways through research, outreach, professional development, and policy advocacy. To achieve this mission, we partner with school districts, institutions of higher education, industry leaders, and federal, state and local government entities who are also dedicated to expanding access and opportunity for traditionally underrepresented students in computing. EPIC also provides evaluation and technology services to external entities to help advance their STEM education research and outreach.</p>
         </div>
     </div>
     <h3>
