--- a/content/education/EPIC/weteach_cs.html
+++ b/content/education/EPIC/weteach_cs.html
@@ -71,45 +71,37 @@ Style guide: components.weteachcs.card
 <div class="weteachcs-card weteachcs-card--highlight">
     <div class="row">
         <!--<div class="row" style="background-color: #f1f1f1; margin: 0px 0px 20px 0px; padding:20px;">-->
-        <div class="col-sm-3 weteachcs-card__figure">
-            <img class="img-responsive" src="/documents/1084364/1750990/wtcs-Lightbulb-5color.png/" /></div>
-        <div class="col-sm-9 weteachcs-card__content">
-            <p>
-                WeTeach_CS educates, empowers, and inspires K-12 CS teachers, administrators, professional development providers, and university instructors to realize the vision of <em>computer science for <strong>all</strong></em>. The Expanding Pathways in Computing (EPIC) group at The University of Texas at Austin's Texas Advanced Computing Center (TACC) serves as the backbone organization for the WeTeach_CS collective impact network which serves hundreds of districts, schools, and educators in Texas and across the nation. WeTeach_CS is dedicated to broadening participation in computing for every student regardless of race, gender, income, or location and leverages the TACC's internationally recognized computing expertise to guide strategic improvement in computing education at a state and national level.</p>
-        </div>
+        <div class="col-sm-3  weteachcs-card__figure">
+            <img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/wtcs-Lightbulb-5color.png/" /></div>
+        <p class="col-sm-9  weteachcs-card__content">
+            WeTeach_CS educates, empowers, and inspires K-12 CS teachers, administrators, professional development providers, and university instructors to realize the vision of <em>computer science for <strong>all</strong></em>. The Expanding Pathways in Computing (EPIC) group at The University of Texas at Austin's Texas Advanced Computing Center (TACC) serves as the backbone organization for the WeTeach_CS collective impact network which serves hundreds of districts, schools, and educators in Texas and across the nation. WeTeach_CS is dedicated to broadening participation in computing for every student regardless of race, gender, income, or location and leverages the TACC's internationally recognized computing expertise to guide strategic improvement in computing education at a state and national level.</p>
     </div>
 </div>
-<div class="weteachcs-card">
-    <div class="row">
-        <!--<div class="row" style="margin-top: 30px;">-->
-        <div class="col-sm-5 weteachcs-card__figure">
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/183874056"></iframe></div>
-        </div>
-        <div class="col-sm-7 weteachcs-card__content">
-            <h3>
-                Goals and Outcomes</h3>
-            <p>
-                WeTeach_CS educates, empowers, and inspires K-12 CS teachers, administrators, professional development providers, and university instructors to realize the vision of <em>computer science for <strong>all</strong></em>.</p>
-            <p>
-                <em><a href="/web/website/weteachcs/goals-and-outcomes">Learn more<span class="sr-only"> about WeTeach_CS goals and outcomes</span></a></em></p>
-        </div>
+<div class="row  weteachcs-card">
+    <figure class="col-sm-5  weteachcs-card__figure">
+        <div class="embed-responsive embed-responsive-16by9  weteachcs-card__media">
+            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/183874056"></iframe></div>
+    </figure>
+    <div class="col-sm-7  weteachcs-card__content">
+        <h3>
+            Goals and Outcomes</h3>
+        <p>
+            WeTeach_CS educates, empowers, and inspires K-12 CS teachers, administrators, professional development providers, and university instructors to realize the vision of <em>computer science for <strong>all</strong></em>.</p>
+        <p>
+            <em><a href="/web/website/weteachcs/goals-and-outcomes">Learn more<span class="sr-only"> about WeTeach_CS goals and outcomes</span></a></em></p>
     </div>
 </div>
-<div class="weteachcs-card">
-    <div class="row">
-        <!--<div class="row" style="margin-top: 30px;">-->
-        <div class="col-sm-5 weteachcs-card__figure">
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/254041542"></iframe></div>
-        </div>
-        <div class="col-sm-7 weteachcs-card__content">
-            <h3>
-                Certification and Professional Development</h3>
-            <p>
-                Our certification and professional development programs are helping to increase the number of CS teachers in Texas while improving the quality of CS classroom instruction.</p>
-            <p>
-                <em><a href="/web/website/weteachcs/certification">Learn more<span class="sr-only"> about WeTeach_CS certification and professional development</span></a></em></p>
-        </div>
+<div class="row  weteachcs-card">
+    <figure class="col-sm-5  weteachcs-card__figure">
+        <div class="embed-responsive embed-responsive-16by9  weteachcs-card__media">
+            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/254041542"></iframe></div>
+    </figure>
+    <div class="col-sm-7  weteachcs-card__content">
+        <h3>
+            Certification and Professional Development</h3>
+        <p>
+            Our certification and professional development programs are helping to increase the number of CS teachers in Texas while improving the quality of CS classroom instruction.</p>
+        <p>
+            <em><a href="/web/website/weteachcs/certification">Learn more<span class="sr-only"> about WeTeach_CS certification and professional development</span></a></em></p>
     </div>
 </div>
