RT-18532: Initial Code for Leader figures
Includes updates to deprecated instances of o-gallery's

--- a/content/education/EPIC/funders-and-project-partners.html
+++ b/content/education/EPIC/funders-and-project-partners.html
@@ -176,6 +176,11 @@ Style guide: components.weteachcs
             - `stem-programs/code-at-tacc/cybersecurity`
             - `epic/funders-and-project-partners`
         */
+        /* WARN: Re-built in:
+            - `epic`
+            - `epic/weteachcs`
+            - `epic/stem-evaluation-services`
+        */
         .o-gallery {
             --grid-gap: 30px;
             --min-item-width: 300px;
