--- a/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -476,6 +476,11 @@
 							- `stem-programs/code-at-tacc/cybersecurity-comptia`
 							- `epic/funders-and-project-partners`
 						*/
+						/* WARN: Re-built in:
+							- `epic`
+							- `epic/weteachcs`
+							- `epic/stem-evaluation-services`
+						*/
 						.o-gallery {
 							--grid-gap: 30px;
 							--min-item-width: 300px;
@@ -485,7 +490,7 @@
 							grid-template-columns: repeat(auto-fit, minmax(var(--min-item-width), 1fr));
 							justify-items: center;
 							align-items: center;
-						}			</style>
+						}</style>
 						<style id="s-gallery-styles" type="text/css">
 						/*
 						Gallery (Scope)
