--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -632,7 +632,7 @@
 				<p style="text-align:center">
 					<small>The camp was funded with the generosity from Cisco University Research Program Fund and Silicon Valley Community Foundation.</small></p>
 				<!-- Gallery removed 2020-09 for "UTS 122 Guidelines […]"--><!-- SEE: https://www.utsystem.edu/sites/policy-library/policies/uts-122-guidelines-web-site-solicitations --><!--<style id="o-gallery-styles" type="text/css">
-		/*
+				/*
 				Gallery (Object)
 		
 				A gallery of apps to launch, images to view, etc.
@@ -648,6 +648,11 @@
 					- `stem-programs/code-at-tacc/cybersecurity-comptia`
 					- `epic/funders-and-project-partners`
 				*/
+				/* WARN: Re-built in:
+					- `epic`
+					- `epic/weteachcs`
+					- `epic/stem-evaluation-services`
+				*/
 				.o-gallery {
 					--grid-gap: 30px;
 					--min-item-width: 300px;
@@ -657,9 +662,9 @@
 					grid-template-columns: repeat(auto-fit, minmax(var(--min-item-width), 1fr));
 					justify-items: center;
 					align-items: center;
-				}	</style>
+				}</style>
 			<style id="s-gallery-styles" type="text/css">
-		/*
+			/*
 				Gallery (Scope)
 		
 				Styles often added for instances of `o-gallery`, but independent of `o-gallery` layout.
@@ -671,9 +676,9 @@
 				*/
 				.s-gallery li {
 					list-style-type: none;
-				}	</style>
+				}</style>
 			<style id="cybersecurity-unique-gallery-styles" type="text/css">
-		.o-gallery {
+				.o-gallery {
 					--grid-gap: 25px;
 					/* FAQ: This variable is borrowed from `.s-gallery` */
 					--min-item-width: var(--smallest-image-width);
@@ -687,28 +692,27 @@
 				.s-gallery li > img {
 					max-width: var(--smallest-image-width);
 					max-height: var(--smallest-image-height);
-				}	</style>
-					<ul class="o-gallery  s-gallery">
-						<li>
-							<small><img alt="Silicon Valley Logo" src="/documents/1084364/1822769/silicon-valley-logo.png" /></small></li>
-						<li>
-							<small><img alt="CISCO Logo" src="/documents/1084364/1822769/cisco-logo-blue-2016.png" /></small></li>
-					</ul>
-				--></div>
-		</div>
-		<!--
-			<div class="row">
-				<div style="margin:50px 0px;padding: 0px;">
-						<h2 style="text-align: center;">
-							Related Links</h2>
-				</div>
-				<div class="col-sm-6">
-					<a aria-label="Learn more about TACC's K-12 programs." href="https://www.tacc.utexas.edu/education/stem-programs/k-12" target="_blank"><img alt="Stem Programs - Educational Programs for Students K-12" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/K-12-Programs.jpg" /></a>
-					<p style="padding:0px; text-align: center;">
-							Learn more about TACC's K-12 programs.</p></div>
-				<div class="col-sm-6">
-					<a aria-label="The formal CODE @ TACC website." href="https://www.gen-cyber.com" target="_blank"><img alt="CODE @ TACC" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DS-Banner.jpg" /></a>
-						</div>
-			</div>
+				}</style>
+				<ul class="o-gallery  s-gallery">
+					<li>
+						<small><img alt="Silicon Valley Logo" src="/documents/1084364/1822769/silicon-valley-logo.png" /></small></li>
+					<li>
+						<small><img alt="CISCO Logo" src="/documents/1084364/1822769/cisco-logo-blue-2016.png" /></small></li>
+				</ul>
 			--></div>
+		</div>
+		<!--<div class="row">
+			<div style="margin:50px 0px;padding: 0px;">
+					<h2 style="text-align: center;">
+						Related Links</h2>
+			</div>
+			<div class="col-sm-6">
+				<a aria-label="Learn more about TACC's K-12 programs." href="https://www.tacc.utexas.edu/education/stem-programs/k-12" target="_blank"><img alt="Stem Programs - Educational Programs for Students K-12" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/K-12-Programs.jpg" /></a>
+				<p style="padding:0px; text-align: center;">
+						Learn more about TACC's K-12 programs.</p></div>
+			<div class="col-sm-6">
+				<a aria-label="The formal CODE @ TACC website." href="https://www.gen-cyber.com" target="_blank"><img alt="CODE @ TACC" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DS-Banner.jpg" /></a>
+			</div>
+		</div>
+	--></div>
 	
