--- a/content/education/EPIC/weteach_cs.html
+++ b/content/education/EPIC/weteach_cs.html
@@ -105,3 +105,45 @@ Style guide: components.weteachcs.card
             <em><a href="/web/website/weteachcs/certification">Learn more<span class="sr-only"> about WeTeach_CS certification and professional development</span></a></em></p>
     </div>
 </div>
+<hr />
+<style id="o-gallery-styles" type="text/css">
+/*
+Gallery (Object)
+
+A gallery of apps to launch, images to view, etc.
+
+.o-gallery--shrink-wrap - Shrink items to minimum size
+
+Markup:
+<ul class="o-gallery">
+    <li>Apple</li>
+    <li>Banana</li>
+    <li>Grapes</li>
+</ul>
+*/
+/* WARN: Duplicated in:
+    - `stem-programs/code-at-tacc/cybersecurity`
+    - `stem-programs/code-at-tacc/cybersecurity-comptia`
+    - `epic/funders-and-project-partners`
+*/
+/* WARN: Re-built in:
+    - `epic`
+    - `epic/weteachcs`
+    - `epic/stem-evaluation-services`
+*/
+.o-gallery {
+    display: grid;
+    grid-gap: var(--grid-gap);
+}
+.o-gallery--shrink-wrap {
+    --min-item-width: 225px;
+
+    grid-template-columns: minmax(var(--min-item-width),min-content);
+}</style>
+<div class="o-gallery o-gallery--shrink-wrap">
+    <figure class="weteachcs-card weteachcs-card--highlight">
+        <img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1085221/amy-carrell.png/">
+        <figcaption class="weteachcs-card__content">
+            <a href="/about/directory/amy-carrell">Amy Carrell</a> serves as Director of Outreach for EPIC and can assist you with questions about WeTeach_CS professional development services.</figcaption>
+    </figure>
+</div>
